depends_compile_tests/tests/fail/derive/graph/multiple_labels_classes.stderr
error: Multiple values for `label` and `class` on edges to node: {("AnotherLabel", Some("Dependencies2")), ("TrackCommentPostIds", Some("Dependencies2"))}.
  --> tests/fail/derive/graph/multiple_labels_classes.rs:13:9
   |
13 |         comments_posts [label="CommentsPosts"];
   |         ^^^^^^^^^^^^^^

error: Multiple values for `label` and `class` on edges to node: {("TrackCommentPostIds", Some("Dependencies2")), ("TrackCommentPostIds", Some("Dependencies3"))}.
  --> tests/fail/derive/graph/multiple_labels_classes.rs:28:9
   |
28 |         comments_posts [label="CommentsPosts"];
   |         ^^^^^^^^^^^^^^
